--- a/YouTubeScrapper.ipynb
+++ b/YouTubeScrapper.ipynb
@@ -1601,7 +1601,7 @@
         },
         "outputId": "fda86980-2daf-491b-bd26-dfaa032d592b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1739,7 +1739,27 @@
             "[youtube] zhWDdy_5v2w: Downloading tv player API JSON\n",
             "[youtube] zhWDdy_5v2w: Downloading ios player API JSON\n",
             "[youtube] zhWDdy_5v2w: Downloading m3u8 information\n",
-            "[info] Testing format 616\n"
+            "[info] Testing format 616\n",
+            "[info] zhWDdy_5v2w: Downloading 1 format(s): 616+251\n",
+            "[hlsnative] Downloading m3u8 manifest\n",
+            "[hlsnative] Total fragments: 12\n",
+            "[download] Destination: What Happens In One Minute？_[zhWDdy_5v2w].f616.mp4\n",
+            "[download] 100% of    7.94MiB in 00:00:01 at 4.01MiB/s                 \n",
+            "[download] Destination: What Happens In One Minute？_[zhWDdy_5v2w].f251.webm\n",
+            "[download] 100% of 1000.54KiB in 00:00:00 at 3.39MiB/s   \n",
+            "[Merger] Merging formats into \"What Happens In One Minute？_[zhWDdy_5v2w].mp4\"\n",
+            "Deleting original file What Happens In One Minute？_[zhWDdy_5v2w].f616.mp4 (pass -k to keep)\n",
+            "Deleting original file What Happens In One Minute？_[zhWDdy_5v2w].f251.webm (pass -k to keep)\n",
+            "Getting Metadata:\n",
+            "Meta Data Fetched Successfully\n",
+            "Fetching Comments:\n",
+            "Fetched Comments Successfully\n",
+            "Generating Transcript:\n",
+            "Transcritpt Generated Successfully\n",
+            "Extracting Frames:\n",
+            "All Frames Extracted Successfully\n",
+            "Processed: What Happens In One Minute? (zhWDdy_5v2w)\n",
+            "Video processed!\n"
           ]
         }
       ]
